# WebAssemblyOpenGL

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  package.json  webpack.config.js
WebAssemblyDemo/Bindings/: bindings.idl  glue_wrapper.cpp
WebAssemblyDemo/Headers/: project.h
WebAssemblyDemo/Sources/: Color.hpp  Counter.cpp  Counter.h  Engine.cpp  Engine.h  OpenGL.cpp  OpenGL.h  OpenGL.hpp  Position.h  UV.h  Vertex.h  Vertex.hpp  main.cpp
app/: counter.js  engine.js  index.html  index.js  loader.js  opengl-demo.js  worker.js
app/wasm/: engine.js  engine.wasm  module.js  module.wasm
demo/: README.md  package.json
demo/e2e/: app.e2e-spec.ts
demo/src/: tsconfig.app.json  tsconfig.spec.json  typings.d.ts
demo/src/app/: app.component.html  app.component.ts
demo/src/app/wasm/: circle.wasm  module.wasm  wasm-demo.ts  wasm-imports.ts  wasm-loader.ts  wasm-module.ts  wasm.component.html  wasm.component.spec.ts  wasm.component.ts
demo/src/c/: main.c
src/: engine.c  linmath.h  main.c
src/c/: counter.c
src/headers/: project.h
